fix mockup-1: set display from flex to grid

--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
         </p>
 
         <div class="inputs-container">
-          <div class="name-email-input-container">
-            <input class="name-input" type="text" placeholder="Name" />
-            <input class="email-input" type="email" placeholder="Email" />
-          </div>
+          <input class="name-input" type="text" placeholder="Name" />
+          <input class="email-input" type="email" placeholder="Email" />
           <input
             class="phone-number-input"
             type="tel"
             placeholder="Phone Number"
           />
-
-          <button class="submit-button" type="submit">Submit</button>
         </div>
+
+        <button class="submit-button" type="submit">Submit</button>
       </section>
 
       <h3>Form Mockup 2</h3>
+
+      <!-- <section class="mockup-2-container">
+        <img src="./assets/mockup-2-img.png" width="230" height="350" />
+      </section> -->
+
       <h3>Form Mockup 3</h3>
       <h3>Form Mockup 4</h3>
     </main>
