add mockup2 form

--- a/index.html
+++ b/index.html
@@ -30,9 +30,39 @@
 
       <h3>Form Mockup 2</h3>
 
-      <!-- <section class="mockup-2-container">
-        <img src="./assets/mockup-2-img.png" width="230" height="350" />
-      </section> -->
+      <section class="mockup-2-container">
+        <img class="mockup-img" src="./assets/mockup-2-img.png" />
+        <section class="contact-container">
+          <div class="header-text">Contact Us</div>
+          <section class="grid-container">
+            <input type="text" placeholder="Full Name" />
+
+            <div class="info-container">
+              <div class="info-header">Contact</div>
+              <div class="info-content">hi@green.com</div>
+            </div>
+
+            <input type="email" placeholder="E-mail" />
+
+            <div class="info-container">
+              <div class="info-header">Based in</div>
+              <div class="info-content">NewYork,<br />California, Ohio</div>
+            </div>
+
+            <input type="text" placeholder="Message" />
+
+            <div></div>
+
+            <button type="submit">Contact Us</button>
+
+            <div class="sns-container">
+              <img src="./assets/facebook.png" />
+              <img src="./assets/instagram.png" />
+              <img src="./assets/twitter.png" />
+            </div>
+          </section>
+        </section>
+      </section>
 
       <h3>Form Mockup 3</h3>
       <h3>Form Mockup 4</h3>
