--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h3>Form Mockup 1</h3>
+      <!-- <h3>Form Mockup 1</h3>
       <section class="mockup-1-container">
         <h2 style="font-size: 35px; color: #fff">Connect With Our Team</h2>
         <p style="font-size: 20px; color: #fff; margin-bottom: 20px">
@@ -62,10 +62,45 @@
             </div>
           </section>
         </section>
-      </section>
+      </section> -->
 
       <h3>Form Mockup 3</h3>
-      <h3>Form Mockup 4</h3>
+      <section class="mockup-3-container">
+        <div class="header-container">
+          <h2>Book your appointment now</h2>
+          <p>So our team can reach out to you on time</p>
+        </div>
+        <section class="form-container">
+          <div class="form-item">
+            <label for="full-name">Full Name</label>
+            <input id="full-name" type="text" placeholder="eg: John Doe" />
+          </div>
+          <div class="form-item">
+            <label for="available-date">Available Date</label>
+          </div>
+          <div class="form-item">
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="eg: john@email.com" />
+          </div>
+          <div class="form-item">
+            <label for="share-your-message">Share Your Message</label>
+            <textarea name="share-your-message">Message</textarea>
+          </div>
+          <div class="form-item">
+            <label for="phone-number">Phone Number</label>
+            <div class="phone-number-container">
+              <select name="country-code">
+                <option value="Canada">+1</option>
+                <option value="South Korea">+82</option>
+              </select>
+              <input id="phone-number" type="tel" placeholder="778123456" />
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- <h3>Form Mockup 4</h3> -->
+      <!-- <section class="mockup-4-container"></section> -->
     </main>
   </body>
 </html>
