add available-date select options

--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
           </div>
           <div class="form-item">
             <label for="available-date">Available Date</label>
+            <div class="available-date-container">
+              <select name="country-code">
+                <option value="">Select</option>
+                <option value="2024-09-01">2024-09-01</option>
+                <option value="2024-09-02">2024-09-02</option>
+                <option value="2024-09-03">2024-09-03</option>
+                <option value="2024-09-04">2024-09-04</option>
+                <option value="2024-09-05">2024-09-05</option>
+              </select>
+            </div>
           </div>
           <div class="form-item">
             <label for="email">Email</label>
