--- a/index.html
+++ b/index.html
@@ -107,6 +107,36 @@
             </div>
           </div>
         </section>
+
+        <section class="submit-container">
+          <button>
+            Book Now
+
+            <!-- Arrow -->
+            <svg
+              width="44"
+              height="44"
+              viewBox="0 0 44 44"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M16 22H28"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M22 16L28 22L22 28"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+        </section>
       </section>
 
       <!-- <h3>Form Mockup 4</h3> -->
