--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
       </section> -->
 
-      <h3>Form Mockup 3</h3>
+      <!-- <h3>Form Mockup 3</h3>
       <section class="mockup-3-container">
         <div class="header-container">
           <h2>Book your appointment now</h2>
@@ -112,7 +112,6 @@
           <button>
             Book Now
 
-            <!-- Arrow -->
             <svg
               width="44"
               height="44"
@@ -137,10 +136,73 @@
             </svg>
           </button>
         </section>
-      </section>
+      </section> -->
 
-      <!-- <h3>Form Mockup 4</h3> -->
-      <!-- <section class="mockup-4-container"></section> -->
+      <h3>Form Mockup 4</h3>
+      <section class="mockup-4-container">
+        <div class="header-container">
+          <h2>Job Application ( Web )</h2>
+        </div>
+
+        <section class="form-container">
+          <div class="form-item">
+            <label for="first-name">First Name</label>
+            <input
+              id="first-name"
+              type="text"
+              placeholder="Enter First Name......"
+            />
+          </div>
+          <div class="form-item">
+            <label for="last-name">Last Name</label>
+            <input
+              id="last-name"
+              type="text"
+              placeholder="Enter Last Name......"
+            />
+          </div>
+          <div class="form-item">
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="Enter Email......" />
+          </div>
+          <div class="form-item">
+            <label for="job-role">Job Role</label>
+            <select name="job-role">
+              <option value="Frontend Developer">Frontend Developer</option>
+              <option value="Backend Developer">Backend Developer</option>
+            </select>
+          </div>
+          <div class="form-item">
+            <label for="address">Enter Address</label>
+            <textarea name="address"></textarea>
+          </div>
+          <div class="form-item">
+            <label for="city">City</label>
+            <input id="city" type="text" placeholder="Enter City......" />
+          </div>
+          <div class="form-item">
+            <label for="pincode">Pincode</label>
+            <input id="pincode" type="text" placeholder="Enter Pincode......" />
+          </div>
+          <div class="form-item">
+            <label for="start-date">Start Date</label>
+            <input
+              id="start-date"
+              type="text"
+              value="23/08/2024"
+              placeholder="23/08/2024"
+            />
+          </div>
+          <div class="form-item">
+            <label for="upload-cv">Upload Your CV</label>
+            <input type="file" id="upload-cv" name="cv" />
+          </div>
+        </section>
+
+        <section class="submit-container">
+          <button>Apply Now</button>
+        </section>
+      </section>
     </main>
   </body>
 </html>
