organize all forms

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <main>
-      <!-- <h3>Form Mockup 1</h3>
-      <section class="mockup-1-container">
+      <h1>Form Mockup 1</h1>
+      <section class="mockup-1-container mockup-container">
         <h2 style="font-size: 35px; color: #fff">Connect With Our Team</h2>
-        <p style="font-size: 20px; color: #fff; margin-bottom: 20px">
+        <p style="font-size: 18px; color: #fff; margin-bottom: 20px">
           Fill the form so that our team can reach out to you
         </p>
 
@@ -28,9 +28,8 @@
         <button class="submit-button" type="submit">Submit</button>
       </section>
 
-      <h3>Form Mockup 2</h3>
-
-      <section class="mockup-2-container">
+      <h1>Form Mockup 2</h1>
+      <section class="mockup-2-container mockup-container">
         <img class="mockup-img" src="./assets/mockup-2-img.png" />
         <section class="contact-container">
           <div class="header-text">Contact Us</div>
@@ -62,10 +61,10 @@
             </div>
           </section>
         </section>
-      </section> -->
+      </section>
 
-      <!-- <h3>Form Mockup 3</h3>
-      <section class="mockup-3-container">
+      <h1>Form Mockup 3</h1>
+      <section class="mockup-3-container mockup-container">
         <div class="header-container">
           <h2>Book your appointment now</h2>
           <p>So our team can reach out to you on time</p>
@@ -112,6 +111,7 @@
           <button>
             Book Now
 
+            <!-- Arrow -->
             <svg
               width="44"
               height="44"
@@ -136,10 +136,10 @@
             </svg>
           </button>
         </section>
-      </section> -->
+      </section>
 
-      <h3>Form Mockup 4</h3>
-      <section class="mockup-4-container">
+      <h1>Form Mockup 4</h1>
+      <section class="mockup-4-container mockup-container">
         <div class="header-container">
           <h2>Job Application ( Web )</h2>
         </div>
